--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+:root {
+  --about-us-caption-width: 400px;
+}
+
 html,
 body {
   padding: 0;
@@ -21,19 +25,13 @@ h1 {
 
 .about-us-caption-button {
   position: absolute;
-  bottom: 8px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 1rem;
+  left: calc(50% - var(--about-us-caption-width) / 2);
   color: white;
   text-align: center;
-  max-width: 75%;
+  width: var(--about-us-caption-width);
 }
 
 .about-us-image-container {
   position: relative;
-}
-
-.about-us-image {
-  width: 100vw;
-  height: 100vh;
 }
